--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 #root {
-  max-width: 1280px;
   margin: 0 auto;
   padding: 0;
   text-align: center;
@@ -7,22 +6,22 @@
 
 body {
   padding: 0;
+  background-color: #FFFFFF;
 }
 
 .form-container {
   display: flex;
-  margin: 8rem auto 4rem auto;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   background-color: #FFFFFF;
-  width: 900px;
+  width: 100%;
   min-height: 400px;
   padding: 4rem 4rem;
   border-radius: 1rem;
-  border: 0.5px solid #CCC;
   box-sizing: border-box;
   overflow: hidden;
+  margin-top: 35px;
 }
 
 .form-container form {
@@ -48,4 +47,22 @@ body {
   padding: 0.75rem 3rem;
   border-radius: .75rem;
   cursor: pointer;
+}
+
+@media (max-width: 768px) {
+  .form-container {
+    width: 90%;
+    padding: 2rem;
+    margin: 4rem auto 2rem auto;
+  }
+
+  .actions {
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  .actions button {
+    width: 100%;
+    padding: 1rem;
+  }
 }
