--- a/src/components/User/EscolherData.css
+++ b/src/components/User/EscolherData.css
@@ -4,3 +4,17 @@
     margin: 2rem 0;
     padding: 3rem 0;
 }
+
+@media (max-width: 768px) {
+  .calendario {
+    padding: 2rem 0;
+    margin: 1rem 0;
+  }
+}
+
+@media (max-width: 480px) {
+  .calendario {
+    padding: 1rem 0;
+    margin: 0;
+  }
+}
